--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
  
-<input type="search" name="search" id="search" placeholder="Search">
+<header>
+  <input type="search" name="search" id="search" placeholder="Search">
+</header>
 
 <div class="grid">
    <a href="images/01.jpg"
@@ -59,7 +61,7 @@
 
 <!--JavaScript-->
 <script src="js/searchFilter.js"></script>
-<script src="js/baguetteBox.min.js"></script>
+<script src="js/baguetteBox.min.js" async></script>
 <script src="js/app.js"></script>
 
 </body>
