fixed why plug in wasnt working
.grid instead of .gallery lol

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <input type="search" name="search" id="search" placeholder="Search">
 </header>
 
-<div class="grid">
+<div class="gallery">
    <a href="images/01.jpg"
     data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
     <img src="images/thumbnails/01.jpg" alt="Hay Bales">
